# AegisDB

./: Cargo.toml  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: build.yaml  test.yaml
src/: main.rs
