[package]
name = "aegisdb"
version = "0.1.0-alpha"
authors = [
    "Awayume <dev@awayume.jp>",
]
edition = "2021"
rust-version = "1.70"
description = "A secure and fast RDBMS written in Rust."
documentation = ""
readme = "./README.md"
homepage = ""
repository = "https://github.com/Awayume/AegisDB"
license = "AGPL-3.0"
keywords = [
    "database",
    "sql",
    "dbms",
    "rdbms",
]
categories = [
    "database",
    "database-implementations",
    "network-programming",
]
publish = false


[dependencies]


[dev-dependencies]


[workspace]
members = []
